# aws-instance

./: .gitignore  Cargo.toml  README.md
ansible/debian/: build.yml  playbook.retry  playbook.yml  tor.yml  tor_relay.yml
ansible/debian/roles/common/handlers/: main.yml
ansible/debian/roles/common/tasks/: main.yml
src/: cmdline.rs  create.rs  destroy.rs  ec2_wrapper.rs  error.rs  list.rs  list_amis.rs  main.rs  profile.rs  ssh.rs  start.rs  stop.rs  util.rs
src/commands/: create.rs  destroy.rs  list.rs  list_amis.rs  list_security_groups.rs  mod.rs  ssh.rs  start.rs  stop.rs
terraform/: profiles.tf  providers.tf  remote_state.tf  security_groups.tf  terraform.tf
