[package]
name = "aws-instance"
version = "0.1.0"
authors = ["Jack Lund <jackl@geekheads.net>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
serde_derive = "1.0.99"
serde = "1.0.98"
rusoto_core = "0.40.0"
rusoto_ec2 = "0.40.0"
rusoto_credential = "0.40.0"
log = "0.4.8"
env_logger = "0.6.2"
lazy_static = "1.3.0"
regex = "1.2.1"
dirs = "2.0.2"
structopt = "0.2.18"
serde-xml-rs = "0.3.1"
snafu = "0.4.4"
chrono = "0.4.7"
serde_json = "1.0.40"
