[package]
name = "aws-instance"
version = "1.0.0"
authors = ["Jack Lund <jackl@geekheads.net>"]
edition = "2021"
description = "Create and SSH into AWS instances"
license = "MIT"

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
serde = "1.0.98"
rusoto_core = "0.48.0"
rusoto_ec2 = "0.48.0"
rusoto_credential = "0.48.0"
log = "0.4.8"
env_logger = "0.6.2"
lazy_static = "1.3.0"
regex = "1.2.1"
dirs = "2.0.2"
serde-xml-rs = "0.3.1"
snafu = "0.4.4"
chrono = "0.4.7"
serde_json = "1.0.40"
tokio = "1.21.2"
clap_complete = "4.0.5"
